Add example outline
Updates scale command to not draw empty scales.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-data/
-outlines/
+data/*
+outlines/*
+!outlines/Example.txt
+
+# Auto-generated ignores:
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
